--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <h1>Ryan VAUGARNI</h1>
-        <h2>Web Developper</h2>
-        <img src="./asset/code.jpg" alt="logo du portfolio" id="cover">
+        <h1>Ryan Vaugarni</h1>
+        <h2>Développeur Web</h2>
+        <img src="./asset/logocode.png" alt="logo du portfolio" id="cover">
 
     </header>
    
@@ -69,7 +69,7 @@
 </main>
 
 <footer>
-    <p>&copy; RYAN VAUGARNI - PORTFOLIO</p>
+    <p>&copy; 2021 Ryan Vaugarni</p>
 </footer>
 </body>
 </html>
