--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <h1>Ryan Vaugarni</h1>
-        <h2>Développeur Web</h2>
+        <h2>Développeur front-end</h2>
         <img src="./asset/logocode.png" alt="logo du portfolio" id="cover">
 
     </header>
@@ -38,11 +38,19 @@
             <li>Lorem ipsum dolor sit amet.</li>
         </ul>
         <h3>Logiciels & Editeurs web</h3>
-        <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
+        <ul id="gallery">
+            <li>
+                <img src="asset/html5-96.png" alt="Image 1">
+            </li>
+            <li>
+                <img src="asset/css3-96.png" alt="Image 2">
+            </li>
+            <li>
+                <img src="asset/javascript-96.png" alt="Image 3">
+            </li>
+            <li>
+                <img src="asset/github-100.png" alt="Image 4">
+            </li>
         </ul>
         <h3>Expérience de travail</h3>
         <ul>
