--- a/index.html
+++ b/index.html
@@ -21,6 +21,16 @@
         <img src="./asset/logocode.png" alt="logo du portfolio" id="cover">
 
     </header>
+    <nav>
+        <ul>
+            <li><a href="#formations">Formations</a></li><!--
+
+            --><li><a href="#compétences">Compétences</a></li><!--
+            --><li><a href="#web">Web</a></li><!--
+            --><li><a href="#experiences">Expériences</a></li><!--
+            --><li><a href="#profil">Profil</a></li>
+        </ul>
+    </nav>
    
     <main>
     <article>
@@ -79,5 +89,6 @@
 <footer>
     <p>&copy; 2021 Ryan Vaugarni</p>
 </footer>
+<script src="./src/script.js"></script>
 </body>
 </html>
